Релиз версия Beta1.0

--- a/WPFApp1/App.config
+++ b/WPFApp1/App.config
@@ -6,7 +6,8 @@
   </configSections>
   <connectionStrings>
     <add name="DBconnectionString" connectionString="Data Source=ASUS\SQLEXPRESS2012;Initial Catalog=ProjectStDB;persist security info=True;user id=sa;password=sa;" providerName="System.Data.SqlClient" />
-    <add name="StDBEntities" connectionString="metadata=res://*/Model.AppDBcontext.Model1.csdl|res://*/Model.AppDBcontext.Model1.ssdl|res://*/Model.AppDBcontext.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ASUS\SQLEXPRESS2012;initial catalog=ProjectStDB;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="StDBEntities" connectionString="metadata=res://*/Model.AppDBcontext.Model1.csdl|res://*/Model.AppDBcontext.Model1.ssdl|res://*/Model.AppDBcontext.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ASUS\SQLEXPRESS2012;initial catalog=ProjectStDB;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
