--- a/WPFApp1/WPFApp1.csproj
+++ b/WPFApp1/WPFApp1.csproj
@@ -102,6 +102,12 @@
     <Compile Include="DialogWindows\AddNewContractWindowDialog.xaml.cs">
       <DependentUpon>AddNewContractWindowDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DialogWindows\AddNewTenderWindowDialog.xaml.cs">
+      <DependentUpon>AddNewTenderWindowDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="DialogWindows\AddNewTTNWindowDialog.xaml.cs">
+      <DependentUpon>AddNewTTNWindowDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DialogWindows\RespPersonsWindowDialog.xaml.cs">
       <DependentUpon>RespPersonsWindowDialog.xaml</DependentUpon>
     </Compile>
@@ -153,16 +159,19 @@
     <Compile Include="Model\AppDBcontext\User_Types.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\DBContextDataWorcker.cs" />
     <Compile Include="Model\Repositories\ContractRepository.cs" />
     <Compile Include="Model\Repositories\CustomersRepository.cs" />
     <Compile Include="Model\Repositories\Intefaces\IContractRepository.cs" />
     <Compile Include="Model\Repositories\Intefaces\ICustomersRepository.cs" />
     <Compile Include="Model\Repositories\Intefaces\IProjektRepository.cs" />
     <Compile Include="Model\Repositories\Intefaces\IResponsPersonsRepository.cs" />
+    <Compile Include="Model\Repositories\Intefaces\ITenderRepository.cs" />
+    <Compile Include="Model\Repositories\Intefaces\ITTNRepository.cs" />
     <Compile Include="Model\Repositories\Intefaces\IUsersRepository.cs" />
     <Compile Include="Model\Repositories\ProjektRepository.cs" />
     <Compile Include="Model\Repositories\ResponsPersonsRepository.cs" />
+    <Compile Include="Model\Repositories\TenderRepository.cs" />
+    <Compile Include="Model\Repositories\TTNRepository.cs" />
     <Compile Include="Model\Repositories\UsersRepository.cs" />
     <Compile Include="Pages\Admin\AdminPage.xaml.cs">
       <DependentUpon>AdminPage.xaml</DependentUpon>
@@ -194,9 +203,6 @@
     <Compile Include="Pages\Contract\ContractPage.xaml.cs">
       <DependentUpon>ContractPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\Contract\AddNewContractPage.xaml.cs">
-      <DependentUpon>AddNewContractPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Pages\EditorPages\AddNewObjektPage.xaml.cs">
       <DependentUpon>AddNewObjektPage.xaml</DependentUpon>
     </Compile>
@@ -215,14 +221,8 @@
     <Compile Include="Pages\LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\Tender\AddNewTenderPage.xaml.cs">
-      <DependentUpon>AddNewTenderPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Pages\Tender\TenderPage.xaml.cs">
       <DependentUpon>TenderPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\TTN\AddNewTTNPage.xaml.cs">
-      <DependentUpon>AddNewTTNPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\TTN\TTNPage.xaml.cs">
       <DependentUpon>TTNPage.xaml</DependentUpon>
@@ -268,6 +268,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="DialogWindows\AddNewContractWindowDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="DialogWindows\AddNewTenderWindowDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="DialogWindows\AddNewTTNWindowDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -328,10 +336,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\Contract\AddNewContractPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Pages\EditorPages\AddNewObjektPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -356,15 +360,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\Tender\AddNewTenderPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Pages\Tender\TenderPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\TTN\AddNewTTNPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
