Добавлены триггеры, Экономическая Часть(Завершена).

--- a/WPFApp1/WPFApp1.csproj
+++ b/WPFApp1/WPFApp1.csproj
@@ -129,6 +129,9 @@
     <Compile Include="Model\AppDBcontext\Contracts.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\AppDBcontext\Currency_type.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\AppDBcontext\Customers.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
