--- a/WPFApp1/App.config
+++ b/WPFApp1/App.config
@@ -5,8 +5,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    
-  <add name="ProjectStDBEntities" connectionString="metadata=res://*/Model.AppDBcontext.Model1.csdl|res://*/Model.AppDBcontext.Model1.ssdl|res://*/Model.AppDBcontext.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ASUS\SQLEXPRESS2012;initial catalog=ProjectStDB;persist security info=True;user id=sa;password=sa;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="ProjectStDBEntities" connectionString="metadata=res://*/Model.AppDBcontext.Model1.csdl|res://*/Model.AppDBcontext.Model1.ssdl|res://*/Model.AppDBcontext.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ASUS\SQLEXPRESS2012;initial catalog=ProjectStDB;persist security info=True;user id=sa;password=sa;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ProjectStDBEntities1" connectionString="metadata=res://*/Model.AppDBcontext.Model1.csdl|res://*/Model.AppDBcontext.Model1.ssdl|res://*/Model.AppDBcontext.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ASUS\SQLEXPRESS2012;initial catalog=ProjectStDB;persist security info=True;user id=sa;password=sa;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
